Fixing the problem with light mode and dark mode and fixing the problem with the contact me button in the home section

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'dana';
-    src: url(../Assets/Font/dana-regular.ttf);
+    src: url(../assets/font/dana-regular.ttf);
 }
 
 html {
